Add README, requirements, and project structure

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -887,6 +887,18 @@
     "\n",
     "product_performance\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "e8c67746",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orders.to_csv(\"../data/clean_orders.csv\", index=False)\n",
+    "customers.to_csv(\"../data/clean_customers.csv\", index=False)\n",
+    "products.to_csv(\"../data/clean_products.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
